--- a/android/examples/PubnubBatteryUsageTest/AndroidManifest.xml
+++ b/android/examples/PubnubBatteryUsageTest/AndroidManifest.xml
@@ -1,44 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pubnub.examples.BatteryTest"
-    android:versionCode="1"
-    android:versionName="1.0" >
+          package="com.example.PubnubBatteryUsageTest"
+          android:versionCode="1"
+          android:versionName="1.0">
 
+    <uses-sdk android:minSdkVersion="17"/>
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+            android:minSdkVersion="8"
+            android:targetSdkVersion="17"/>
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/pubnub_large"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+            android:allowBackup="true"
+            android:icon="@drawable/pubnub_large"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
         <activity
-            android:name="com.pubnub.examples.BatteryTest.BatteryTest"
-            android:label="@string/app_name" >
+                android:name="com.pubnub.examples.BatteryTest.BatteryTest"
+                android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name="com.pubnub.examples.BatteryTest.PublishActivity"
-            android:label="@string/title_activity_publish" >
+                android:name="com.pubnub.examples.BatteryTest.PublishActivity"
+                android:label="@string/title_activity_publish">
         </activity>
         <activity
-            android:name="com.pubnub.examples.BatteryTest.SubscribeActivity"
-            android:label="@string/title_activity_subscribe" >
+                android:name="com.pubnub.examples.BatteryTest.SubscribeActivity"
+                android:label="@string/title_activity_subscribe">
         </activity>
         <activity
-            android:name="com.pubnub.examples.BatteryTest.HistoryActivity"
-            android:label="@string/title_activity_history" >
+                android:name="com.pubnub.examples.BatteryTest.HistoryActivity"
+                android:label="@string/title_activity_history">
         </activity>
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 </manifest>
