--- a/android/examples/PubnubExample/AndroidManifest.xml
+++ b/android/examples/PubnubExample/AndroidManifest.xml
@@ -1,17 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.pubnub.examples.pubnubExample"
+          package="com.example.PubnubExample"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk
-            android:minSdkVersion="8"
-            android:targetSdkVersion="17"/>
+    <uses-sdk android:minSdkVersion="17"/>
 
     <application android:allowBackup="true"
                  android:icon="@drawable/pubnub_large"
                  android:label="@string/app_name"
                  android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity"
+        <activity android:name="com.pubnub.examples.pubnubExample.MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
