startup service on boot

--- a/android/examples/PubnubSubscribe/AndroidManifest.xml
+++ b/android/examples/PubnubSubscribe/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pubnub.examples.pubnubsubscribe"
+    android:installLocation="internalOnly"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -27,11 +28,16 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".BootReceiver" >
+        <receiver
+            android:name=".BootReceiver"
+            android:enabled="true"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
             </intent-filter>
         </receiver>
+
 
         <service android:name=".PubnubService" />
     </application>
