--- a/android/examples/PubnubFilterDemo/AndroidManifest.xml
+++ b/android/examples/PubnubFilterDemo/AndroidManifest.xml
@@ -12,6 +12,8 @@
                  android:theme="@style/AppTheme">
 
         <activity android:name="com.pubnub.examples.filterdemo.MainActivity"
+            	  android:windowSoftInputMode="adjustPan"
+            	  android:theme="@android:style/Theme.Light.NoTitleBar"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
