--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ gen/
 # Local configuration file (sdk path, etc)
 local.properties
 
+# Log4j configuration file
+log4j.properties
+
 # Eclipse project files
 .classpath
 .project
