chaning logger in android to slf4j

--- a/android/build.xml
+++ b/android/build.xml
@@ -40,6 +40,7 @@
     <path id="PubnubApi.classpath">
         <pathelement location="bin"/>
         <pathelement location="../java/libs/bcprov-jdk15on-1.47.jar"/>
+        <pathelement location="../java/libs/slf4j-api-1.7.5.jar"/>
         <pathelement location="libs/android-8.jar"/>
     </path>
 
@@ -50,6 +51,7 @@
     <path id="classpath">
         <pathelement location="bin"/>
         <pathelement location="${java_core_path}/libs/bcprov-jdk15on-1.47.jar"/>
+        <pathelement location="${java_core_path}/libs/slf4j-api-1.7.5.jar"/>
         <pathelement location="libs/android-8.jar"/>
     </path>
     <target name="test" />
