--- a/scala/scala-pubnub-tests/pom.xml
+++ b/scala/scala-pubnub-tests/pom.xml
@@ -163,7 +163,7 @@
           <filereports>WDF TestSuite.txt</filereports>
           <tagsToInclude>com.pubnub.api.tests.ErrorTest</tagsToInclude>
           <systemProperties>
-            <org.slf4j.simpleLogger.defaultLogLevel>debug</org.slf4j.simpleLogger.defaultLogLevel>
+            <org.slf4j.simpleLogger.defaultLogLevel></org.slf4j.simpleLogger.defaultLogLevel>
           </systemProperties>
         </configuration>
         <executions>
@@ -203,7 +203,44 @@
               <config>publish_key=ds,subscribe_key=ds,secret_key=ds,cipher_key=enigma,ssl=true</config>
             </configuration>
           </execution>
-        </executions>
+          <execution>
+          <id>SSL=FALSE,UNICODE=TRUE</id>
+          <goals>
+            <goal>test</goal>
+          </goals>
+          <configuration>
+            <config>publish_key=ds,subscribe_key=ds,secret_key=ds,ssl=false,unicode=true</config>
+          </configuration>
+        </execution>
+        <execution>
+          <id>SSL=TRUE,UNICODE=TRUE</id>
+          <goals>
+            <goal>test</goal>
+          </goals>
+          <configuration>
+            <config>publish_key=ds,subscribe_key=ds,secret_key=ds,ssl=true,unicode=true</config>
+          </configuration>
+        </execution>
+        <execution>
+          <id>ENCRYPTION=TRUE,SSL=FALSE,UNICODE=TRUE</id>
+          <goals>
+            <goal>test</goal>
+          </goals>
+          <configuration>
+            <config>publish_key=ds,subscribe_key=ds,secret_key=ds,cipher_key=enigma,ssl=false,unicode=true</config>
+          </configuration>
+        </execution>
+        <execution>
+          <id>ENCRYPTION=TRUE,SSL=TRUE,UNICODE=TRUE</id>
+          <goals>
+            <goal>test</goal>
+          </goals>
+          <configuration>
+            <config>publish_key=ds,subscribe_key=ds,secret_key=ds,cipher_key=enigma,ssl=true,unicode=true</config>
+          </configuration>
+        </execution>
+
+      </executions>
       </plugin>
 
     </plugins>
