--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,8 @@ repositories {
 
 dependencies {
     compile group: 'com.squareup.retrofit2', name: 'retrofit', version:'2.1.0'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version:'2.7.3'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version:'2.7.3'
-    compile group: 'com.squareup.retrofit2', name: 'converter-jackson', version:'2.1.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    compile group: 'com.squareup.retrofit2', name: 'converter-gson', version:'2.1.0'
     compile group: 'com.squareup.okhttp3', name: 'logging-interceptor', version:'3.4.1'
     compile group: 'org.slf4j', name: 'slf4j-nop', version:'1.7.21'
 
