--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -158,6 +158,7 @@ features:
     - PUBLISH-ASYNC
     - PUBLISH-FIRE 
     - PUBLISH-REPLICATION-FLAG
+    - PUBLISH-MESSAGE-TTL
   storage:
     - STORAGE-REVERSE
     - STORAGE-INCLUDE-TIMETOKEN
@@ -173,3 +174,4 @@ features:
     - SUBSCRIBE-WITH-TIMETOKEN
     - SUBSCRIBE-WILDCARD
     - SUBSCRIBE-FILTER-EXPRESSION
+    - SUBSCRIBE-PUBLISHER-UUID
